Added a profile link

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,8 +11,8 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">PITCH APP</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-secondary text-light">
+        <a class="navbar-brand text-light" href="#">PITCH APP</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -21,19 +21,26 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="{{ url_for('main.home') }}">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link text-light" href="{{ url_for('main.home') }}">Home <span
+                            class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('main.about') }}">About</a>
+                    <a class="nav-link text-light" href="{{ url_for('main.about') }}">About</a>
                 </li>
 
             </ul>
             <form class="form-inline my-2 my-lg-0">
-                <a class="nav-link" href="{{ url_for('main.login') }}">Login</a>
-                <a class="nav-link" href="{{ url_for('main.register') }}">Register</a>
+                {% if current_user.is_authenticated %}
+                <a class="nav-link text-light">{{current_user.username}}</a>
+                <a class="nav-link text-light" href="{{ url_for('main.login') }}">Login</a>
+                <a class="nav-link text-light" href="{{url_for('main.signout')}}">Sign out</a>
+                <a class="nav-link text-light" href="{{ url_for('main.register') }}">Register</a>
+                {% endif %}
+
             </form>
         </div>
     </nav>
+
 
 
     <main role="main" class="container">
