--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,13 +30,19 @@
 
             </ul>
             <form class="form-inline my-2 my-lg-0">
-                {% if current_user.is_authenticated %}
+                <!-- {% if current_user.is_authenticated %}
                 <a class="nav-link text-light">{{current_user.username}}</a>
                 <a class="nav-link text-light" href="{{ url_for('main.login') }}">Login</a>
                 <a class="nav-link text-light" href="{{url_for('main.signout')}}">Sign out</a>
                 <a class="nav-link text-light" href="{{ url_for('main.register') }}">Register</a>
-                {% endif %}
+                {% endif %} -->
 
+                    {% if current_user.is_authenticated %}
+                  <a class="nav-link text-light" href="{{url_for('main.profile',uname=current_user.username)}}">Profile</a>
+                  <a class="nav-link text-light" href="{{url_for('main.signout')}}">Sign out</a>
+                  <a class="nav-link text-light" href="{{url_for('main.login')}}">Log in</a>
+                  <a class="nav-link text-light" href="{{ url_for('main.register') }}">Register</a>
+                  {%endif%}
             </form>
         </div>
     </nav>
