Added a pitch form

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -42,6 +42,7 @@
                   <a class="nav-link text-light" href="{{url_for('main.signout')}}">Sign out</a>
                   <a class="nav-link text-light" href="{{url_for('main.login')}}">Log in</a>
                   <a class="nav-link text-light" href="{{ url_for('main.register') }}">Register</a>
+                   <a class="nav-link text-light" href="{{ url_for('main.new_pitch') }}">New Pitch</a>
                   {%endif%}
             </form>
         </div>
