--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -37,13 +37,14 @@
                 <a class="nav-link text-light" href="{{ url_for('main.register') }}">Register</a>
                 {% endif %} -->
 
-                    {% if current_user.is_authenticated %}
-                  <a class="nav-link text-light" href="{{url_for('main.profile',uname=current_user.username)}}">Profile</a>
-                  <a class="nav-link text-light" href="{{url_for('main.signout')}}">Sign out</a>
-                  <a class="nav-link text-light" href="{{url_for('main.login')}}">Log in</a>
-                  <a class="nav-link text-light" href="{{ url_for('main.register') }}">Register</a>
-                   <a class="nav-link text-light" href="{{ url_for('main.new_pitch') }}">New Pitch</a>
-                  {%endif%}
+                {% if current_user.is_authenticated %}
+                <a class="nav-link text-light"
+                    href="{{url_for('main.profile',uname=current_user.username)}}">Profile</a>
+                <a class="nav-link text-light" href="{{url_for('main.signout')}}">Sign out</a>
+                <a class="nav-link text-light" href="{{url_for('main.login')}}">Log in</a>
+                <a class="nav-link text-light" href="{{ url_for('main.register') }}">Register</a>
+                <a class="nav-link text-light" href="{{ url_for('main.new_pitch') }}">New Pitch</a>
+                {%endif%}
             </form>
         </div>
     </nav>
@@ -67,13 +68,13 @@
             </div>
             <div class="col-md-4">
                 <div class="content-section">
-                    <h3>Our Sidebar</h3>
-                    <p class='text-muted'>You can put any information here you'd like.
+                    <h3>View Pitches</h3>
+                    <p class='text-muted'>You can view pitches below based on categories
                     <ul class="list-group">
-                        <li class="list-group-item list-group-item-light">Latest Posts</li>
-                        <li class="list-group-item list-group-item-light">Announcements</li>
-                        <li class="list-group-item list-group-item-light">Calendars</li>
-                        <li class="list-group-item list-group-item-light">etc</li>
+                        <a class="list-group-item list-group-item-light" href="{{ url_for('main.new_pitch') }}">New Pitch</a>
+                        <a class="list-group-item list-group-item-light" href="{{ url_for('main.new_pitch') }}">Entertainment</a>
+                        <a class="list-group-item list-group-item-light" href="{{ url_for('main.new_pitch') }}">Pickup Lines</a>
+                        <a class="list-group-item list-group-item-light" href="{{ url_for('main.new_pitch') }}">Advertisement</a>
                     </ul>
                     </p>
                 </div>
