--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -40,11 +40,12 @@
                 {% if current_user.is_authenticated %}
                 <a class="nav-link text-light"
                     href="{{url_for('main.profile',uname=current_user.username)}}">Profile</a>
+                {%endif%}
                 <a class="nav-link text-light" href="{{url_for('main.signout')}}">Sign out</a>
                 <a class="nav-link text-light" href="{{url_for('main.login')}}">Log in</a>
                 <a class="nav-link text-light" href="{{ url_for('main.register') }}">Register</a>
                 <a class="nav-link text-light" href="{{ url_for('main.new_pitch') }}">New Pitch</a>
-                {%endif%}
+
             </form>
         </div>
     </nav>
@@ -71,10 +72,14 @@
                     <h3>View Pitches</h3>
                     <p class='text-muted'>You can view pitches below based on categories
                     <ul class="list-group">
-                        <a class="list-group-item list-group-item-light" href="{{ url_for('main.new_pitch') }}">New Pitch</a>
-                        <a class="list-group-item list-group-item-light" href="{{ url_for('main.new_pitch') }}">Entertainment</a>
-                        <a class="list-group-item list-group-item-light" href="{{ url_for('main.new_pitch') }}">Pickup Lines</a>
-                        <a class="list-group-item list-group-item-light" href="{{ url_for('main.new_pitch') }}">Advertisement</a>
+                        <a class="list-group-item list-group-item-light" href="{{ url_for('main.new_pitch') }}">New
+                            Pitch</a>
+                        <a class="list-group-item list-group-item-light"
+                            href="{{ url_for('main.new_pitch') }}">Entertainment</a>
+                        <a class="list-group-item list-group-item-light" href="{{ url_for('main.new_pitch') }}">Pickup
+                            Lines</a>
+                        <a class="list-group-item list-group-item-light"
+                            href="{{ url_for('main.new_pitch') }}">Advertisement</a>
                     </ul>
                     </p>
                 </div>
