Added the categories html files

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -75,11 +75,12 @@
                         <a class="list-group-item list-group-item-light" href="{{ url_for('main.new_pitch') }}">New
                             Pitch</a>
                         <a class="list-group-item list-group-item-light"
-                            href="{{ url_for('main.new_pitch') }}">Entertainment</a>
-                        <a class="list-group-item list-group-item-light" href="{{ url_for('main.new_pitch') }}">Pickup
+                            href="{{ url_for('main.display_entertainment') }}">Entertainment</a>
+                        <a class="list-group-item list-group-item-light"
+                            href="{{ url_for('main.display_pickuplines') }}">Pickup
                             Lines</a>
                         <a class="list-group-item list-group-item-light"
-                            href="{{ url_for('main.new_pitch') }}">Advertisement</a>
+                            href="{{ url_for('main.display_advertisement') }}">Advertisement</a>
                     </ul>
                     </p>
                 </div>
