Added the comment method

--- a/app/templates/entertainment.html
+++ b/app/templates/entertainment.html
@@ -14,11 +14,10 @@
         <!-- Text -->
 
         <!-- Comment button -->
-        <button type="button" class="btn btn-success">Comment</button>
-        <!-- Like Button -->
-        <button type="button" class="btn btn-primary">Like</button>
-        <!-- Dislike Button -->
-        <button type="button" class="btn btn-danger">Dislike</button>
+        <a href="/comment/{{pitch.id}}"><button type=" button" class="btn btn-primary">Comment</button></a>
+        <button type=" button" class="btn btn-primary">Like</button>
+            <!-- Dislike Button -->
+            <button type="button" class="btn btn-danger">Dislike</button>
 
     </div>
 </div>
