--- a/app/templates/pickuplines.html
+++ b/app/templates/pickuplines.html
@@ -14,7 +14,7 @@
         <!-- Text -->
 
         <!-- Comment button -->
-        <button type="button" class="btn btn-success">Comment</button>
+        <a href="/comment/{{pitch.id}}"><button type=" button" class="btn btn-primary">Comment</button></a>
         <!-- Like Button -->
         <button type="button" class="btn btn-primary">Like</button>
         <!-- Dislike Button -->
