--- a/app/templates/entertainment.html
+++ b/app/templates/entertainment.html
@@ -15,10 +15,20 @@
 
         <!-- Comment button -->
         <a href="/comment/{{pitch.id}}"><button type=" button" class="btn btn-primary">Comment</button></a>
-        <span class="foot" > <a href="{{url_for('main.like',id = id)}}"><i class="fa fa-thumbs-up" style="font-size:18px;color: green"></i></a> {{category.upvote.count()}}</span>
-        <button type=" button" class="btn btn-primary">Like</button>
-            <!-- Dislike Button -->
-            <button type="button" class="btn btn-danger">Dislike</button>
+        {% for category in allPitches %}
+
+         <!--Like Button-->
+        <span class="foot"> <a href="{{url_for('main.like',id = category.id)}}">
+                <button type=" button" class="btn btn-primary">Like</button>
+            </a> {{category.like.count()}}</span>
+
+            <!--Dislike Button-->
+
+         <span class="foot"> <a href="{{url_for('main.dislike',id = category.id)}}">
+                <button type=" button" class="btn btn-danger">DisLike</button>
+            </a> {{category.dislike.count()}}</span>
+
+        {%endfor%}
 
     </div>
 </div>
