--- a/app/templates/comment.html
+++ b/app/templates/comment.html
@@ -1,26 +1,30 @@
 {% extends 'base.html'%}
-{% import 'bootstrap/wtf.html' as wtf %}
+<!-- {% import 'bootstrap/wtf.html' as wtf %} -->
 
 {% block content %}
 
-            {% if users_comments %}
-                
-                    {% for comment in all_comments %}
-                     
-                            <h5>{{comment.pitch.title}}</h5>
-                             <p class="card-title">{{ comment.comment }}</p>
-                             <p class="card-text">--- {{comment.user.username}}</p>
-                    {% endfor %}
-                   <div class="col-md-5  commentform" >
+{% if users_comments %}
 
-                        {{wtf.quick_form(form)}}
-            {%else%}
-           
-                  <p class="card-title">No Comments for this yet for this post. Be the first to comment</p>
-                
-                    {{wtf.quick_form(form)}}
-            
-            {%endif%}
+{% for comment in users_comments %}
+
+<h5>{{comment.pitch.title}}</h5>
+<p class="card-title">{{ comment.comment }}</p>
+<p class="card-text">--- {{comment.user.username}}</p>
+{% endfor %}
+<div class="col-md-5  commentform">
+
+    {{wtf.quick_form(form)}}
+
+
+    {%else%}
+
+    <p class="card-title">No Comments for this yet for this post. Be the first to comment</p>
+
+    {{wtf.quick_form(form)}}
+
+    {%endif%}
+
 
    
-{% endblock %}
+
+    {% endblock %}
