--- a/app/templates/pickuplines.html
+++ b/app/templates/pickuplines.html
@@ -15,10 +15,17 @@
 
         <!-- Comment button -->
         <a href="/comment/{{pitch.id}}"><button type=" button" class="btn btn-primary">Comment</button></a>
-        <!-- Like Button -->
-        <button type="button" class="btn btn-primary">Like</button>
-        <!-- Dislike Button -->
-        <button type="button" class="btn btn-danger">Dislike</button>
+
+         <!--Like Button-->
+        <span class="foot"> <a href="{{url_for('main.like',id = allPitches.id)}}">
+                <button type=" button" class="btn btn-primary">Like</button>
+            </a> {{allPitches.like.count()}}</span>
+
+            <!--Dislike Button-->
+
+         <span class="foot"> <a href="{{url_for('main.dislike',id = allPitches.id)}}">
+                <button type=" button" class="btn btn-danger">DisLike</button>
+            </a> {{allPitches.dislike.count()}}</span>
 
     </div>
 </div>
