--- a/app/templates/advertisement.html
+++ b/app/templates/advertisement.html
@@ -14,21 +14,19 @@
         <!-- Text -->
 
         <!-- Comment button -->
-        <a href="/comment/{{pitch.id}}"><button type=" button" class="btn btn-primary">Comment</button></a>
-        {% for category in allPitches %}
+        <span class="foot"><a href="/comment/{{pitch.id}}"><button type=" button" class="btn btn-success">Comment</button>
+        </a>{{allPitches.like.count()}}</span>
 
          <!--Like Button-->
-        <span class="foot"> <a href="{{url_for('main.like',id = category.id)}}">
+        <span class="foot"> <a href="{{url_for('main.like',id = allPitches.id)}}">
                 <button type=" button" class="btn btn-primary">Like</button>
-            </a> {{category.like.count()}}</span>
+            </a> {{allPitches.like.count()}}</span>
 
             <!--Dislike Button-->
 
-         <span class="foot"> <a href="{{url_for('main.dislike',id = category.id)}}">
+         <span class="foot"> <a href="{{url_for('main.dislike',id = allPitches.id)}}">
                 <button type=" button" class="btn btn-danger">DisLike</button>
-            </a> {{category.dislike.count()}}</span>
-
-        {%endfor%}
+            </a> {{allPitches.dislike.count()}}</span>
 
     </div>
 </div>
