--- a/app/templates/pitch.html
+++ b/app/templates/pitch.html
@@ -2,8 +2,7 @@
 {% import 'bootstrap/wtf.html' as wtf%}
 
 {% block content %}
-<h3>Create a New Pitch</h3>
-<button type="button" class="btn btn-primary">Primary</button>
+<h3 style="margin-top: 70px;">Create a New Pitch</h3>
 {{wtf.quick_form(form)}}
 
 {% endblock content %}
