--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -35,12 +35,12 @@
       {% endif %}
   </div>
   </div>
-  </div>
-  <h3>My Pitches</h3>
+  
+  <h3>Your Pitches</h3>
 
   {% for pitch in pitches %}
 
-<div class="card card-cascade wider mt-5">
+<div class="card card-cascade wider mt-5 mb-5">
     <div class="card-body card-body-cascade text-center">
 
         <!-- Title -->
@@ -68,6 +68,7 @@
          {%endfor%}
 
     </div>
+</div>
 </div>
 
 
